--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <title>Java</title>
  <button>You should click this</button>
- import java.util.*; //import java helper functions
+ <body>
+  import java.util.*; //import java helper functions
 
 public class Main {
 
@@ -27,3 +28,4 @@ public class Main {
                   
         }else{
             System.out.println("Wrong");
+  </body>
