--- a/index.html
+++ b/index.html
@@ -1,31 +1,4 @@
 <html>
 <title>Java</title>
- <button>You should click this</button>
- <body>
-  import java.util.*; //import java helper functions
-
-public class Main {
-
-    public static void main(String[] args) {
-        // Creat a variable kb linked to the keyboard
-        Scanner kb = new Scanner(System.in);
-        
-        for(;;) {
-        System.out.println("What's the meaning of life?");
-        String response = kb.nextLine(); // Wait for the Answer
-        if (response.equals("42")) {
-        break;
-        }else{
-        System.out.println("Wrong");
-        }
-        }
-        for(;;) {
-        System.out.println("And What is 2+2?");
-        String response = kb.nextLine();
-        if (response.equals("4") || response.equals("four") || response.equals("Four")) {
-            System.out.println("But how do you know?");
-            break;
-                  
-        }else{
-            System.out.println("Wrong");
-  </body>
+ <button style="button-align:center;">Click this button</button>
+style = 
