--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
 <title>Java</title>
- <button style="button-align:center;">Click this button</button>
-style = 
+ <button type="button" onclick="myFunction()">Click this button</button>\
+ <script>
+ function myFunction() {
+  document.getElementById("demo").style.fontSize = "25px";
+ }
+  </script>
+   <p id="demo">JavaScript can change the style of an HTML element.</p>
