--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
+ <body>
 <title>Java</title>
- <button type="button" onclick="myFunction()">Click this button</button>\
+ <button type="button" onclick="myFunction()">Click this button</button>
  <script>
  function myFunction() {
   document.getElementById("demo").style.fontSize = "25px";
  }
   </script>
    <p id="demo">JavaScript can change the style of an HTML element.</p>
+ </body>
