--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <html>
  <body>
 <title>Java</title>
- <button type="button" onclick="myFunction()">Click this button</button>
- <script>
- function myFunction() {
-  document.getElementById("demo").style.fontSize = "25px";
- }
-  </script>
-   <p id="demo">JavaScript can change the style of an HTML element.</p>
+ <button type="button" onclick="Why did you press it">Click this button</button>
+ <p id="demo"></p>
  </body>
