--- a/index.html
+++ b/index.html
@@ -19,4 +19,7 @@ function myFunction() {
     }
 }
 </script>  
+   <audio autoplay loop height=240 width=480>
+    <source src="Kingdom Hearts HD 2.5 ReMix -Sacred Moon- Extended.mp3" type="audio/mpeg">
+</audio>
  </body>
