--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
  <head>
+      <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
  </head>
  <body>
 <title>Java</title>
