--- a/index.html
+++ b/index.html
@@ -22,4 +22,5 @@ function myFunction() {
    <audio autoplay loop height=240 width=480>
     <source src="Kingdom Hearts HD 2.5 ReMix -Sacred Moon- Extended.mp3" type="audio/mpeg">
 </audio>
+   <a href="test.html">Test</a>
  </body>
