--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <body>
 <title>Java</title>
   
-<button onclick="myFunction()">Don't Press this button?</button>
+<button onclick="myFunction()">Don't Press this button</button>
 
 <div id="myDIV">Why did you press it</div>
 
