--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-<link rel="icon" type="image/x-icon" href="/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/x-icon" href="/favicon-16x16.ico" sizes="16x16">
  </head>
  <body>
 <title>Java</title>
