--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 <button onclick="myFunction()">Don't Press this button</button>
 
-<div id="myDIV">Why did you press it</div>
+<div id="myDIV" style="display:none;">Why did you press it</div>
 
 <script>
 function myFunction() {
