--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
  <hr>
  <button>idk</button>
   </div>
-
 <script>
 function myFunction() {
     var x = document.getElementById("myDIV");
@@ -26,4 +25,16 @@ function myFunction() {
     <source src="Kingdom Hearts HD 2.5 ReMix -Sacred Moon- Extended.mp3" type="audio/mpeg">
 </audio>
    <a href="test.html">Test</a>
+   <head>
+        <style>
+            c1{
+               color : 8AEF25
+                }
+          body {
+            background-image: url("TheWorldThatNeverWas.jpg");
+            background-repeat: no-repeat;
+            background-size: 1370px 710px;
+          }
+      </style>
+  </head>
  </body>
