--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html>
  <head>
 <link rel="shortcut icon" type="image/x-icon" href="favicon-16x16.ico" sizes="16x16">
+<link rel="stylesheet" href="TheWorldThatNeverWas.css" type="text/css">
  </head>
  <body>
 <title>Java</title>
   
 <button onclick="myFunction()">Don't Press this button</button>
 
-<div id="myDIV" style="display:none;">Why did you press it
+<div id="myDIV" style="display:none;"><p>Why did you press it
  <hr>
  <button>idk</button>
   </div>
+  
 <script>
 function myFunction() {
     var x = document.getElementById("myDIV");
