--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   
 <button onclick="myFunction()">Don't Press this button</button>
 
-<div id="myDIV" style="display:none;"><p>Why did you press it
+  <div id="myDIV" style="display:none;"><h3>Why did you press it?</h3>
  <hr>
  <button>idk</button>
-  </div>
+</div>
   
 <script>
 function myFunction() {
