--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
   <div id="myDIV" style="display:none;"><h3>Why did you press it?</h3>
  <hr>
- <button>idk</button>
-</div>
+<select id="priority">
+    <option>Idk</option>
+    <option>You can't Tell me What to do</option>
+    <option>Nothing else to do</option>
+</select></div>
   
 <script>
 function myFunction() {
