--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <button onclick="myFunction()">Don't Press this button</button>
 
   <div id="myDIV" style="display:none;"><h3>Why did you press it?</h3>
-</select></div>
+</select>
+<br>
+<option>Idk</option>
+<option>You can't Tell me What to do</option>
+<option>Nothing else to do</option></div>
  <select id="priority">
-    <option>Idk</option>
-    <option>You can't Tell me What to do</option>
-    <option>Nothing else to do</option>
+
   
 <script>
 function myFunction() {
