--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <br>
 <option>Idk</option>
 <option>You can't Tell me What to do</option>
-<option>Nothing else to do</option></div>
- <select id="priority">
+<option>Nothing else to do</option>
+ <select id="priority"></div>
 
   
 <script>
