--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <div id="myDIV" style="display:none;"><h3>Why did you press it?</h3>
 </select>
 <br>
+<select id="priority">
 <option>Idk</option>
 <option>You can't Tell me What to do</option>
 <option>Nothing else to do</option>
- <select id="priority"></div>
+</div>
 
   
 <script>
